--- a/RestaurantRoulette/app/src/main/res/layout/activity_login.xml
+++ b/RestaurantRoulette/app/src/main/res/layout/activity_login.xml
@@ -4,19 +4,45 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.cs371m.chuchu.restaurantroulette.LoginActivity">
+    tools:context="com.cs371m.chuchu.restaurantroulette.Login">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:id="@+id/loginLayout" >
+
+        <EditText
+            android:layout_width="200dp"
+            android:layout_height="50dp"
+            android:id="@+id/usernameEditText"
+            android:hint="Enter username"
+            android:layout_gravity="center_horizontal" />
+
+        <EditText
+            android:layout_width="200dp"
+            android:layout_height="50dp"
+            android:id="@+id/passwordEditText"
+            android:hint="Enter password"
+            android:inputType="textPassword"
+            android:layout_gravity="center_horizontal" />
+
+        <Button
+            android:layout_width="150dp"
+            android:layout_height="50dp"
+            android:text="Login"
+            android:layout_gravity="center_horizontal"
+            android:id="@+id/loginButton" />
+
+
+    </LinearLayout>
 
     <Button
-        android:id="@+id/register_button"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:text="Register"
-        android:onClick="onRegister" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New User? Register Here"
+        android:id="@+id/registerButton"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
 
-    <Button
-        android:layout_below="@id/register_button"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:text="Login"
-        android:onClick="onLogin" />
 </RelativeLayout>
