--- a/RestaurantRoulette/app/src/main/res/layout/activity_register.xml
+++ b/RestaurantRoulette/app/src/main/res/layout/activity_register.xml
@@ -4,9 +4,44 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.cs371m.chuchu.restaurantroulette.RegisterActivity">
+    tools:context="com.cs371m.chuchu.restaurantroulette.Register">
 
-    <TextView android:text="Register" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:id="@+id/loginLayout" >
+
+        <EditText
+            android:layout_width="200dp"
+            android:layout_height="50dp"
+            android:id="@+id/usernameEditText"
+            android:hint="Enter username"
+            android:layout_gravity="center_horizontal" />
+
+        <EditText
+            android:layout_width="200dp"
+            android:layout_height="50dp"
+            android:id="@+id/passwordEditText"
+            android:hint="Enter password"
+            android:inputType="textPassword"
+            android:layout_gravity="center_horizontal" />
+
+        <EditText
+            android:layout_width="200dp"
+            android:layout_height="50dp"
+            android:id="@+id/passwordAgainEditText"
+            android:hint="Reenter password"
+            android:inputType="textPassword"
+            android:layout_gravity="center_horizontal" />
+
+        <Button
+            android:layout_width="150dp"
+            android:layout_height="50dp"
+            android:text="Register"
+            android:layout_gravity="center_horizontal"
+            android:id="@+id/registerButton" />
+
+    </LinearLayout>
 
 </RelativeLayout>
