--- a/RestaurantRoulette/app/src/main/res/menu/menu_account.xml
+++ b/RestaurantRoulette/app/src/main/res/menu/menu_account.xml
@@ -1,6 +1,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
 xmlns:app="http://schemas.android.com/apk/res-auto"
-xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
+xmlns:tools="http://schemas.android.com/tools" tools:context=".AccountActivity">
+<item android:id="@+id/action_settings" android:title="@string/action_settings"
+    android:orderInCategory="100" app:showAsAction="never" />
 <item android:id="@+id/action_refresh" android:title="Refresh"
     android:icon="@drawable/ic_autorenew_black_24dp"
     app:showAsAction="always" />
