trying to merge added maps, working on place picker

--- a/RestaurantRoulette/app/src/main/res/menu/menu_maps.xml
+++ b/RestaurantRoulette/app/src/main/res/menu/menu_maps.xml
@@ -12,4 +12,6 @@
         app:showAsAction="always"/>
 
     <item android:id="@+id/action_select" android:title="Filters"/>
+    <item android:id="@+id/action_account" android:title="Account"/>
+
 </menu>
