--- a/RestaurantRoulette/app/src/main/res/layout/activity_create_event.xml
+++ b/RestaurantRoulette/app/src/main/res/layout/activity_create_event.xml
@@ -17,6 +17,12 @@
             android:text="Create Event"
             android:id="@+id/textView" />
 
+        <Button
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:text="Pick Restaurant"
+            android:id="@+id/PickRestaurantButton" />
+
         <EditText
             android:layout_width="200dp"
             android:layout_height="wrap_content"
