--- a/RestaurantRoulette/app/src/main/res/layout/activity_maps.xml
+++ b/RestaurantRoulette/app/src/main/res/layout/activity_maps.xml
@@ -1,12 +1,19 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.cs371m.chuchu.restaurantroulette.MapsActivity">
+    android:layout_height="match_parent"
+    tools:context=".MainActivity">
 
-    <TextView android:text="Map here" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:map="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
+        android:layout_height="match_parent" android:id="@+id/map"
+        tools:context="com.cs371m.chuchu.restaurantroulette.MapsActivity"
+        android:name="com.google.android.gms.maps.SupportMapFragment" />
+
 
 </RelativeLayout>
+
+
+
+
+
