Add event details, my events

--- a/RestaurantRoulette/app/src/main/res/layout/column_row.xml
+++ b/RestaurantRoulette/app/src/main/res/layout/column_row.xml
@@ -4,26 +4,19 @@ android:layout_width="match_parent"
 android:layout_height="match_parent">
 
 <TextView
-    android:id="@+id/host"
-    android:layout_height="wrap_content"
-    android:layout_width="0dp"
-    android:layout_weight="1"
-    android:textStyle="bold" />
-
-<TextView
     android:id="@+id/restaurant"
     android:layout_height="wrap_content"
     android:layout_width="0dp"
     android:layout_weight="1" />
 
 <TextView
-    android:id="@+id/time"
+    android:id="@+id/date"
     android:layout_height="wrap_content"
     android:layout_width="0dp"
-    android:layout_weight="0.5" />
+    android:layout_weight="1" />
 
 <TextView
-    android:id="@+id/type"
+    android:id="@+id/time"
     android:layout_height="wrap_content"
     android:layout_width="0dp"
     android:layout_weight="1" />
