--- a/RestaurantRoulette/app/src/main/res/layout/activity_account.xml
+++ b/RestaurantRoulette/app/src/main/res/layout/activity_account.xml
@@ -4,7 +4,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.cs371m.chuchu.restaurantroulette.Login">
+    tools:context="com.cs371m.chuchu.restaurantroulette.Account">
 
     <LinearLayout
         android:layout_width="wrap_content"
