--- a/RestaurantRoulette/app/src/main/res/layout/activity_main.xml
+++ b/RestaurantRoulette/app/src/main/res/layout/activity_main.xml
@@ -5,13 +5,22 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Events Nearby"
+        android:id="@+id/title"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/listView"
-        android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"></ListView>
+        android:layout_alignParentStart="true"
+        android:layout_below="@id/title"></ListView>
 
     <android.support.design.widget.FloatingActionButton
         android:layout_width="wrap_content"
@@ -22,4 +31,12 @@
         android:layout_alignRight="@+id/listView"
         android:layout_alignEnd="@+id/listView" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/myEvents"
+        android:text="My Events"
+        android:layout_alignParentBottom="true"
+        android:layout_marginRight="10dp"
+        android:layout_toLeftOf="@id/createEvent" />
 </RelativeLayout>
