--- a/RestaurantRoulette/app/src/main/res/layout/activity_register.xml
+++ b/RestaurantRoulette/app/src/main/res/layout/activity_register.xml
@@ -22,6 +22,13 @@
         <EditText
             android:layout_width="200dp"
             android:layout_height="50dp"
+            android:id="@+id/email"
+            android:hint="Enter email"
+            android:layout_gravity="center_horizontal" />
+
+        <EditText
+            android:layout_width="200dp"
+            android:layout_height="50dp"
             android:id="@+id/passwordEditText"
             android:hint="Enter password"
             android:inputType="textPassword"
