--- a/RestaurantRoulette/app/src/main/res/menu/menu_account.xml
+++ b/RestaurantRoulette/app/src/main/res/menu/menu_account.xml
@@ -1,18 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
 xmlns:app="http://schemas.android.com/apk/res-auto"
-xmlns:tools="http://schemas.android.com/tools" tools:context=".AccountActivity">
-<item android:id="@+id/action_settings" android:title="@string/action_settings"
-    android:orderInCategory="100" app:showAsAction="never" />
-<item android:id="@+id/action_refresh" android:title="Refresh"
-    android:icon="@drawable/ic_autorenew_black_24dp"
-    app:showAsAction="always" />
-<item android:id="@+id/action_sort_by" android:title="Sort By"
-    android:icon="@drawable/ic_swap_vert_black_24dp"
-    app:showAsAction="always" />
-<item android:id="@+id/action_toggle_view" android:title="Toggle View"
-    android:icon="@drawable/ic_map_black_24dp"
-    app:showAsAction="always"/>
-
-<item android:id="@+id/action_select" android:title="Filters"/>
-<item android:id="@+id/action_account" android:title="Account"/>
+xmlns:tools="http://schemas.android.com/tools" tools:context=".Account">
+<item android:id="@+id/action_show_events" android:title="Events List"
+    android:icon="@drawable/ic_list_black_24dp"
+    app:showAsAction="always|withText"/>
 </menu>
