--- a/RestaurantRoulette/app/src/main/res/menu/menu_login.xml
+++ b/RestaurantRoulette/app/src/main/res/menu/menu_login.xml
@@ -2,4 +2,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.cs371m.chuchu.restaurantroulette.Login">
+
+    <item android:id="@+id/action_show_events" android:title="Events List"
+        android:icon="@drawable/ic_list_black_24dp"
+        app:showAsAction="always|withText"/>
 </menu>
