--- a/RestaurantRoulette/app/src/main/res/menu/menu_register.xml
+++ b/RestaurantRoulette/app/src/main/res/menu/menu_register.xml
@@ -2,6 +2,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.cs371m.chuchu.restaurantroulette.Register">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
-        android:orderInCategory="100" app:showAsAction="never" />
+
+    <item android:id="@+id/action_show_events" android:title="Events List"
+    android:icon="@drawable/ic_list_black_24dp"
+    app:showAsAction="always|withText"/>
+
 </menu>
