--- a/RestaurantRoulette/app/src/main/res/layout/column_row.xml
+++ b/RestaurantRoulette/app/src/main/res/layout/column_row.xml
@@ -7,25 +7,13 @@ android:layout_height="match_parent">
     android:id="@+id/restaurant"
     android:layout_height="wrap_content"
     android:layout_width="0dp"
-    android:layout_weight="1" />
+    android:layout_weight="2" />
 
 <TextView
-    android:id="@+id/date"
+    android:id="@+id/datetime"
     android:layout_height="wrap_content"
     android:layout_width="0dp"
-    android:layout_weight="1" />
-
-<TextView
-    android:id="@+id/time"
-    android:layout_height="wrap_content"
-    android:layout_width="0dp"
-    android:layout_weight="1" />
-
-<TextView
-    android:id="@+id/price"
-    android:layout_height="wrap_content"
-    android:layout_width="0dp"
-    android:layout_weight="1" />
+    android:layout_weight="2" />
 
 <TextView
     android:id="@+id/distance"
