--- a/RestaurantRoulette/app/src/main/res/menu/menu_create_event.xml
+++ b/RestaurantRoulette/app/src/main/res/menu/menu_create_event.xml
@@ -4,4 +4,5 @@ xmlns:tools="http://schemas.android.com/tools" tools:context=".CreateEvent">
 <item android:id="@+id/action_show_events" android:title="Events List"
     android:icon="@drawable/ic_list_black_24dp"
     app:showAsAction="always|withText"/>
+<item android:id="@+id/action_account" android:title="Account"/>
 </menu>
