--- a/RestaurantRoulette/app/src/main/res/menu/menu_create_event.xml
+++ b/RestaurantRoulette/app/src/main/res/menu/menu_create_event.xml
@@ -1,8 +1,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
 xmlns:app="http://schemas.android.com/apk/res-auto"
 xmlns:tools="http://schemas.android.com/tools" tools:context=".CreateEvent">
-<item android:id="@+id/action_show_events" android:title="Events List"
-    android:icon="@drawable/ic_list_black_24dp"
-    app:showAsAction="always|withText"/>
+<item android:id="@+id/action_show_events" android:title="Events Map"
+    android:icon="@drawable/ic_map_black_24dp"
+    app:showAsAction="always"/>
+<item android:id="@+id/action_rate" android:title="Rate Attendees"
+    android:icon="@drawable/ic_star_half_black_24dp"
+    app:showAsAction="always" />
 <item android:id="@+id/action_account" android:title="Account"/>
 </menu>
