--- a/RestaurantRoulette/app/src/main/res/menu/menu_main.xml
+++ b/RestaurantRoulette/app/src/main/res/menu/menu_main.xml
@@ -4,11 +4,11 @@ xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
 <item android:id="@+id/action_refresh" android:title="Refresh"
     android:icon="@drawable/ic_autorenew_black_24dp"
     app:showAsAction="always" />
-<item android:id="@+id/action_sort_by" android:title="Sort By"
-    android:icon="@drawable/ic_swap_vert_black_24dp"
-    app:showAsAction="always" />
 <item android:id="@+id/action_toggle_view" android:title="Toggle View"
-    android:icon="@drawable/ic_map_black_24dp"
-    app:showAsAction="always"/>
-<item android:id="@+id/action_account" android:title="Account"/>
+    android:icon="@drawable/ic_list_black_24dp"
+    app:showAsAction="always" />
+<item android:id="@+id/action_rate" android:title="Rate Attendees"
+    android:icon="@drawable/ic_star_half_black_24dp"
+    app:showAsAction="ifRoom" />
+<item android:id="@+id/action_account" android:title="Account" />
 </menu>
