--- a/RestaurantRoulette/app/src/main/res/layout/activity_event_details.xml
+++ b/RestaurantRoulette/app/src/main/res/layout/activity_event_details.xml
@@ -58,6 +58,24 @@
             android:padding="10dp"
             android:id="@+id/attendees" />
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <Spinner
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:background="@color/blue"
+                android:clickable="true"
+                android:id="@+id/spinner" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="View Rating"
+                android:id="@+id/viewRatingButton" />
+        </LinearLayout>
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
